--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -344,201 +344,6 @@ label input[type=radio] {
 .mt-30 { margin-top: 30px; }
 .mb-30 { margin-bottom: 30px; }
 
-/* 1.5: Animations */
-.animated {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-fill-mode: backwards;
-    animation-fill-mode: backwards;
-}
-.animated.infinite {
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-}
-
-@-webkit-keyframes ripple {
-    100% {
-        top: -20px;
-        right: -20px;
-        bottom: -20px;
-        left: -20px;
-        opacity: 0;
-    }
-}
-@keyframes ripple {
-    100% {
-        top: -20px;
-        right: -20px;
-        bottom: -20px;
-        left: -20px;
-        opacity: 0;
-    }
-}
-.ripple:before,
-.ripple:after {
-    content: '';
-    position: absolute;
-    border: #fff solid 15px;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    border-radius: 100%;
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-iteration-count: infinite;
-            animation-iteration-count: infinite;
-}
-.ripple:hover:before, .ripple:focus:before, .ripple:active:before,
-.ripple:hover:after, .ripple:focus:after, .ripple:active:after {
-    -webkit-animation-name: ripple;
-    animation-name: ripple;
-}
-.ripple:hover:after, .ripple:focus:after, .ripple:active:after {
-    -webkit-animation-delay: .5s;
-            animation-delay: .5s;
-}
-
-@-webkit-keyframes fadeInDown {
-    0% {
-        opacity: 0;
-        -webkit-transform: translate3d(0,-40px,0);
-        transform: translate3d(0,-40px,0)
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0)
-    }
-}
-@keyframes fadeInDown {
-    0% {
-        opacity: 0;
-        -webkit-transform: translate3d(0,-40px,0);
-        transform: translate3d(0,-40px,0)
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0)
-    }
-}
-.fadeInDown {
-    -webkit-animation-name: fadeInDown;
-    animation-name: fadeInDown
-}
-@-webkit-keyframes fadeInUp {
-    0% {
-        opacity: 0;
-        -webkit-transform: translate3d(0,40px,0);
-        transform: translate3d(0,40px,0)
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0)
-    }
-}
-@keyframes fadeInUp {
-    0% {
-        opacity: 0;
-        -webkit-transform: translate3d(0,40px,0);
-        transform: translate3d(0,40px,0)
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0)
-    }
-}
-.fadeInUp {
-    -webkit-animation-name: fadeInUp;
-    animation-name: fadeInUp
-}
-@-webkit-keyframes fadeInLeft {
-    from {
-        opacity: 0;
-        -webkit-transform: translate3d(-50%, 0, 0);
-        transform: translate3d(-50%, 0, 0);
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-}
-
-@keyframes fadeInLeft {
-    from {
-        opacity: 0;
-        -webkit-transform: translate3d(-50%, 0, 0);
-        transform: translate3d(-50%, 0, 0);
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-}
-
-.fadeInLeft {
-    -webkit-animation-name: fadeInLeft;
-    animation-name: fadeInLeft;
-}
-@-webkit-keyframes fadeInRight {
-    from {
-        opacity: 0;
-        -webkit-transform: translate3d(50%, 0, 0);
-        transform: translate3d(50%, 0, 0);
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-}
-
-@keyframes fadeInRight {
-    from {
-        opacity: 0;
-        -webkit-transform: translate3d(50%, 0, 0);
-        transform: translate3d(50%, 0, 0);
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-}
-
-.fadeInRight {
-    -webkit-animation-name: fadeInRight;
-    animation-name: fadeInRight;
-}
-@-webkit-keyframes spin {
-    0% {
-        -webkit-transform: rotate(0deg); 
-        transform: rotate(0deg); 
-    }
-    100% { 
-        -webkit-transform: rotate(360deg); 
-        transform: rotate(360deg); 
-    }
-}
-@keyframes spin {
-    0% { 
-        -webkit-transform: rotate(0deg); 
-        transform: rotate(0deg); 
-    }
-    100% { 
-        -webkit-transform: rotate(360deg); 
-        transform: rotate(360deg); 
-    }
-}
-.spin {
-    -webkit-animation: spin 2s linear infinite;
-    animation: spin 1s linear infinite;
-}
 
 /*=============================================
     02: Titles
@@ -788,7 +593,7 @@ label input[type=radio] {
     left: -999px;
     right: -999px;
     margin: auto;
-    max-width: inherit;
+    width: 100%;
 }
 .slide-content:before {
     content: '';
