--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,70 +1,8 @@
-/*---------------------------------------------
-Template name:  Serviney
-Version:        1.0
-Author:         ThemeLooks
-Author url:     http://themelooks.com
-
-NOTE:
------
-Please DO NOT EDIT THIS CSS, you may need to use "custom.css" file for writing your custom css.
-We may release future updates so it will overwrite this file. it's better and safer to use "custom.css".
-
-[Table of Content]
-
-01: General CSS 
-    1.1: Default CSS
-    1.2: Buttons
-    1.3: Default Classes
-    1.4: Padding/Margin
-    1.5: Animations
-02: Titles
-    2.1: Page Title
-    2.2: Section Title
-03: Header
-    3.1: Header-top
-    3.2: Header Menu
-    3.3: Header Call
-04: Banner
-05: About Us
-06: Services
-07: Packages
-08: Reviews
-09: FAQ
-10: Blog
-    10.1: Single Post
-    10.2: Blog Pagination
-    10.3: Blog Details
-    10.4: Post Author
-11: Comments
-12: Widgets
-13: Products
-    13.1: Single Product
-    13.2: Product Image Gallery
-    13.3: Product Details
-    13.4: Product tabbed content
-14: Cart
-15: Checkout
-16: Billing Details
-17: Subscription form
-18: Contact
-19: Footer
-    19.1: Footer Widgets
-    19.2: Copyright and Social Profiles
-20: Others
-    20.1: Popup video
-    20.2: Back to top
-    20.3: Preloader
-    20.4: Form validation
-    20.5: Content animation
-    20.6: 404 Page
-
-----------------------------------------------*/
-
 /*=============================================
-    01: General CSS
+    General CSS
 ==============================================*/
 
-/* 1.1: Default CSS */
+/* Default CSS */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -165,7 +103,7 @@ body {
     pointer-events: none;
 }
 
-/* 1.2: Buttons */
+/* Buttons */
 .btn {
     color: #fff;
     position: relative;
@@ -227,7 +165,7 @@ body {
     padding: 0.5rem 0.9rem;
 }
 
-/* 1.3: Default Classes */
+/* Default Classes */
 .theme-bg-overlay {
     position: relative;
 }
@@ -315,7 +253,7 @@ label input[type=radio] {
     border-color: #e2edea;
 }
 
-/* 1.4: Padding/Margin */
+/* Padding/Margin */
 .pt-120 { padding-top: 120px; }
 .pb-120 { padding-bottom: 120px; }
 .pt-90 { padding-top: 90px; }
@@ -346,7 +284,7 @@ label input[type=radio] {
 
 
 /*=============================================
-    02: Titles
+    Titles
 ==============================================*/
 
 /* 2.1: Page Title */
@@ -395,7 +333,7 @@ label input[type=radio] {
     pointer-events: none;
 }
 
-/* 2.2: Section Title */
+/* Section Title */
 .section-title {
     padding-bottom: 30px;
 }
@@ -414,10 +352,10 @@ label input[type=radio] {
 }
 
 /*=============================================
-    03: Header
+    Header
 ==============================================*/
 
-/* 3.2: Header Menu */
+/* Header Menu */
 .main-header{
     box-shadow: none;
     position: relative;
@@ -582,7 +520,7 @@ label input[type=radio] {
 }
 
 /*=============================================
-    04: Banner
+    Banner
 ==============================================*/
 
 .main-slider .swiper-slide {
@@ -639,7 +577,7 @@ label input[type=radio] {
 }
 
 /*=============================================
-    05: About Us
+    About Us
 ==============================================*/
 
 .single-about-us {
@@ -735,7 +673,7 @@ label input[type=radio] {
 
 
 /*=============================================
-    08: Reviews
+    Reviews
 ==============================================*/
 
 
@@ -754,14 +692,14 @@ label input[type=radio] {
 
 
 /*=============================================
-    10: Blog
+    Blog
 ==============================================*/
 
 .our_menu {
     margin-bottom: -6px;
 }
 
-/* 10.1: Single Post */
+/* Single Post */
 .single-news {
     position: relative;
 }
@@ -859,6 +797,9 @@ label input[type=radio] {
     height: auto;
     margin-top: -7%;
 }
+
+/* menu */
+
 #menu .next-news,
 #menu .next-product {
     text-align: right;
@@ -884,12 +825,13 @@ label input[type=radio] {
     top: 270px;
 }
 
+/* Our Special */
 #our-special .content {
     background-color: #ffffffd2;
     padding: 20px;
 }
 
-/* 10.2: Blog Pagination */
+/* Blog Pagination */
 .blog-pagination {
     margin-bottom: 55px;
 }
@@ -945,7 +887,7 @@ label input[type=radio] {
     color: #60c2a4;
 }
 
-/* 10.4: Post Author */
+/* Post Author */
 .post-author-img {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 100px;
@@ -987,7 +929,7 @@ label input[type=radio] {
 }
 
 /*=============================================
-    11: Comments
+    Comments
 ==============================================*/
 
 .single-comment {
@@ -1045,7 +987,7 @@ label input[type=radio] {
 }
 
 /*=============================================
-    12: Widgets
+    Widgets
 ==============================================*/
 
 .search-widget input {
@@ -1195,10 +1137,10 @@ label input[type=radio] {
 }
 
 /*=============================================
-    13: Products
+    Products
 ==============================================*/
 
-/* 13.1: Single Product */
+/* Single Product */
 .single-product {
     position: relative;
 }
@@ -1268,7 +1210,7 @@ label input[type=radio] {
     margin-left: 5px;
 }
 
-/* 13.2: Product Image Gallery */
+/* Product Image Gallery */
 .product-gallery img {
     border: 1px solid #f0f0f0;
 }
@@ -1297,7 +1239,7 @@ label input[type=radio] {
     opacity: 1;
 }
 
-/* 13.3: Product Details */
+/* Product Details */
 .product-descripton h1 {
     margin-bottom: 15px;
 }
@@ -1403,7 +1345,7 @@ label input[type=radio] {
     font-size: 0.75rem;
 }
 
-/* 13.4: Product tabbed content */
+/* Product tabbed content */
 .pro-tab-nav {
     border-bottom: 1px solid #e2edea;
     padding-bottom: 8px;
@@ -1445,7 +1387,7 @@ label input[type=radio] {
 }
 
 /*=============================================
-    14: Cart
+    Cart
 ==============================================*/
 
 .sn-cart th {
@@ -1533,7 +1475,7 @@ label input[type=radio] {
 }
 
 /*=============================================
-    15: Checkout
+    Checkout
 ==============================================*/
 
 .checkout-additional-option {
@@ -1584,7 +1526,7 @@ label input[type=radio] {
 }
 
 /*=============================================
-    16: Billing Details
+    Billing Details
 ==============================================*/
 
 .billing-details {
@@ -1645,7 +1587,7 @@ label input[type=radio] {
 }
 
 /*=============================================
-    17: Subscription form
+    Subscription form
 ==============================================*/
 
 .subscription-form {
@@ -1665,7 +1607,7 @@ label input[type=radio] {
 }
 
 /*=============================================
-    18: Contact
+    Contact
 ==============================================*/
 
 .map {
@@ -1695,10 +1637,10 @@ label input[type=radio] {
 }
 
 /*=============================================
-    19: Footer
+    Footer
 ==============================================*/
 
-/* 19.1: Footer Widgets */
+/* Footer Widgets */
 .footer-widget > .h4 {
     margin-bottom: 20px;
 }
@@ -1764,7 +1706,7 @@ label input[type=radio] {
     color: #605cb8;
 }
 
-/* 19.2: Copyright and Social Profiles */
+/* Copyright and Social Profiles */
 .bottom-footer {
     padding: 25px 0;
 }
@@ -1789,7 +1731,7 @@ label input[type=radio] {
 }
 
 /*=============================================
-    20: Others
+    Others
 ==============================================*/
 
 .number-one-content h2 {
@@ -1828,7 +1770,7 @@ a.tip:hover {
     color: #fff !important;
 }
 
-/* 20.1: Popup video */
+/* Popup video */
 .popup-video {
     position: relative;
 }
@@ -1863,7 +1805,7 @@ a.tip:hover {
     color: #605cb8;
 }
 
-/* 20.2: Back to top */
+/* Back to top */
 .back-to-top {
     position: fixed;
     right: 30px;
@@ -1896,7 +1838,7 @@ a.tip:hover {
     color: #fff;
 }
 
-/* 20.3: Preloader */
+/* Preloader */
 .preLoader {
     position: fixed;
     top: 0;
@@ -1922,7 +1864,7 @@ a.tip:hover {
     animation: spin 1s linear infinite;
 }
 
-/* 20.4: Form validation */
+/* Form validation */
 .parsley-errors-list {
     list-style: none;
     padding: 0;
@@ -1942,7 +1884,7 @@ a.tip:hover {
     padding: 0 0.625rem;
 }
 
-/* 20.5: Content animation */
+/* Content animation */
 [data-animate] {
     visibility: hidden;
     -webkit-animation-duration: 0.6s;
@@ -1952,7 +1894,7 @@ a.tip:hover {
     visibility: visible;
 }
 
-/* 20.6: 404 Page */
+/* 404 Page */
 .page-not-found {
     border-top: 1px solid #e6e6e6;
 }
