--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,7 +172,7 @@ body {
 .theme-bg-overlay:before {
     content: '';
     position: absolute;
-    background: #605cb8;
+    background: rgba(0,0,0,0.3);
     opacity: 0.7;
     left: 0;
     top: 0;
@@ -829,6 +829,17 @@ label input[type=radio] {
 #our-special .content {
     background-color: #ffffffd2;
     padding: 20px;
+}
+
+/* Join Us */
+#join_us::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.3);
 }
 
 /* Blog Pagination */
