--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -346,7 +346,7 @@
     }
 
     #our-special {
-        padding: 30px;
+        padding: 20px 0;
     }
     #our-special .our-special-part-1 {
         border-right: none;
