--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -661,7 +661,18 @@ label input[type=radio] {
 /*=============================================
     Reviews
 ==============================================*/
-
+#reviews {
+    position: relative;
+}
+#reviews::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.3);
+}
 
 .review-author-img {
     -webkit-box-flex: 0;
@@ -1636,6 +1647,19 @@ label input[type=radio] {
 /*=============================================
     Footer
 ==============================================*/
+footer .footer_part-1 {
+    position: relative;
+}
+footer .footer_part-1::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.3);
+}
+
 
 /* Footer Widgets */
 .footer-widget > .h4 {
